--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title> Tomomi's Personal Site</title>
+    <title> Tomona's Personal Site</title>
 </head>
 
 <body>
