--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <hr>
       <td><img src="capyzou.png" alt="My photo"></td>
       <td>
-        <h1>Tomomi Uji</h1>
+        <h1>Tomomii Uji</h1>
         <p><em>Foundeer and CTO of <strong><a href="#">The App Brewery.</a></strong></em></p>
         <p>I am a Ui/UX designer wannabie. I love wine and going to bars.</p>
       </td>
